--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,23 +85,23 @@ services:
             CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
         networks:
             - microservice-networks
-    control-center:
-        image: confluentinc/cp-enterprise-control-center:7.7.0
-        hostname: control-center
-        container_name: control-center
-        depends_on:
-            - broker
-        ports:
-            - "9021:9021"
-        environment:
-            CONTROL_CENTER_BOOTSTRAP_SERVERS: 'broker:29092'
-            CONTROL_CENTER_REPLICATION_FACTOR: 1
-            CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
-            CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
-            CONFLUENT_METRICS_TOPIC_REPLICATION: 1
-            PORT: 9021
-        networks:
-            - microservice-networks
+    # control-center:
+    #     image: confluentinc/cp-enterprise-control-center:7.7.0
+    #     hostname: control-center
+    #     container_name: control-center
+    #     depends_on:
+    #         - broker
+    #     ports:
+    #         - "9021:9021"
+    #     environment:
+    #         CONTROL_CENTER_BOOTSTRAP_SERVERS: 'broker:29092'
+    #         CONTROL_CENTER_REPLICATION_FACTOR: 1
+    #         CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
+    #         CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
+    #         CONFLUENT_METRICS_TOPIC_REPLICATION: 1
+    #         PORT: 9021
+    #     networks:
+    #         - microservice-networks
     notificationservice:
         build:
             context: .
